# libcola-rust

./: .gitignore  Cargo.toml
examples/web/: gallery.html  index.html  playground.html  stress-animation.html
examples/web3d/: camera.js  geometry.js  index.html  main.js  meshes.js  renderer.js  shaders.wgsl
src/: lib.rs  wasm.rs
src/cola/: box.rs  cluster.rs  commondefs.rs  compound_constraints.rs  conjugate_gradient.rs  connected_components.rs  convex_hull.rs  gradient_projection.rs  layout.rs  mod.rs  pseudorandom.rs  shortest_paths.rs  sparse_matrix.rs
src/vpsc/: block.rs  constraint.rs  mod.rs  rectangle.rs  solver.rs  variable.rs
